# Winehouse-Engine

./: .gitignore  Cargo.toml  justfile  package.json  pnpm-lock.yaml
.claude/: launch.json  start-editor.sh
.github/workflows/: ci.yml  deploy.yml
crates/winehouse-animation/: Cargo.toml
crates/winehouse-animation/src/: lib.rs
crates/winehouse-asset/: Cargo.toml
crates/winehouse-asset/src/: lib.rs
crates/winehouse-audio/: Cargo.toml
crates/winehouse-audio/src/: lib.rs
crates/winehouse-core/: Cargo.toml
crates/winehouse-core/src/: lib.rs
crates/winehouse-ecs/: Cargo.toml
crates/winehouse-ecs/src/: component.rs  entity.rs  lib.rs  world.rs
crates/winehouse-input/: Cargo.toml
crates/winehouse-input/src/: lib.rs
crates/winehouse-physics/: Cargo.toml
crates/winehouse-physics/src/: lib.rs
crates/winehouse-render/: Cargo.toml
crates/winehouse-render/src/: camera.rs  lib.rs  mesh.rs  renderer.rs
crates/winehouse-scene/: Cargo.toml
crates/winehouse-scene/src/: lib.rs
crates/winehouse-scripting/: Cargo.toml
crates/winehouse-scripting/src/: lib.rs
crates/winehouse-wasm-bridge/: Cargo.toml
crates/winehouse-wasm-bridge/src/: lib.rs
shaders/: bloom_blur.wgsl  bloom_threshold.wgsl  cas.wgsl  dof.wgsl  fxaa.wgsl  gbuffer.wgsl  lighting.wgsl  motion_blur.wgsl  pbr.wgsl  shadow.wgsl  ssao.wgsl  ssao_blur.wgsl  ssr.wgsl  ssr_composite.wgsl  taa.wgsl  tonemap.wgsl  triangle.wgsl  volumetric.wgsl  volumetric_composite.wgsl
