[workspace]
resolver = "2"
members = [
    "crates/winehouse-ecs",
    "crates/winehouse-render",
    "crates/winehouse-asset",
    "crates/winehouse-physics",
    "crates/winehouse-audio",
    "crates/winehouse-animation",
    "crates/winehouse-scene",
    "crates/winehouse-input",
    "crates/winehouse-scripting",
    "crates/winehouse-core",
    "crates/winehouse-wasm-bridge",
]

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "24"

[profile.release]
opt-level = "s"
lto = true
